# AdventofCode

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  gen.py  results.md  template.rs
.cargo/: config.toml
aoc2015/: Cargo.toml  results.md
aoc2015/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
aoc2016/: CMakeLists.txt  Makefile  compile_commands.json  excuses.md  results.md
aoc2016/src/: day1.h  day10.h  day11.h  day12.h  day13.h  day14.h  day15.h  day16.h  day17.h  day18.h  day19.h  day2.h  day20.h  day21.h  day22.h  day23.h  day24.h  day25.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h  day9.h  iter.h  main.c  main.d  map.h  md5.c  md5.h  types.h  utils.h  vec.h
aoc2017/: Cargo.toml  results.md
aoc2017/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  utils.rs
aoc2018/: CMakeLists.txt  results.md
aoc2018/src/: day1.hpp  day14.hpp  day2.hpp  day3.hpp  main.cpp  utils.hpp
aoc2023/: Template.cs  adventofcode23.sln
aoc2023/DayEight/: DayEight.csproj  Program.cs
aoc2023/DayEleven/: Program.cs
aoc2023/DayFive/: Map.cs  Program.cs
cmake/: CMakeCache.txt
src/: day2.rs  lib.rs  main.rs
(+16 files in other folders)
