[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
itertools = "0.12.0"
md5 = "0.7.0"
memoize = "0.4.2"
rayon = "1.8.0"
strum = {version="0.26.1", features=["derive"]}
