[package]
edition = "2021"
name = "aoc2017"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
# fxhash = "0.2.1"
itertools = "0.12.0"
primes = "0.4.0"
rand = "0.8.5"
rayon = "1.8.0"
strum = { version = "0.26.1", features = ["derive"] }

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 3
